ECA-1041: make error message about user status easier to read by using clear text (generated instead of 40)
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@6798 37aeb1de-b14b-0410-9a0e-82b28170d228